# nightly-pick

./: .gitignore  README.md
deployment/: .env.example  .gitignore  README.md  deploy.sh  docker-compose.yml
deployment/nginx/: nightly-pick.conf.template
docs/: agent-provider-architecture.md  implementation-steps.md  mvp-prd.md  mvp-technical-architecture.md
nightly-pick-agent/: .env.example  .env.minimax.example  .gitignore  Dockerfile  README.md  pyproject.toml
nightly-pick-agent/app/: config.py  dependencies.py  main.py  models.py  prompts.py  request_context.py  system.py  timing.py
nightly-pick-agent/app/providers/: base.py  deepseek.py  minimax.py  mock.py  registry.py  tencent_asr.py
nightly-pick-agent/app/routes/: chat.py  health.py  memory.py  record.py  speech.py
nightly-pick-agent/app/services/: agent_service.py  container.py
nightly-pick-agent/nightly_pick_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
nightly-pick-agent/scripts/: run-minimax.sh
nightly-pick-agent/tests/: test_chat_fixtures.py  test_deepseek_provider.py  test_mock_providers.py  test_reflection_fixtures.py
nightly-pick-agent/tests/fixtures/: README.md  chat_cases.json  reflection_cases.json
nightly-pick-miniapp/: .env  App.vue  README.md  config.js  main.js  manifest.json  package.json  pages.json  tsconfig.json  vite.config.js
nightly-pick-miniapp/components/: EmotionChips.vue  NpBottomNav.vue  PhoneLoginModal.vue
nightly-pick-server/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pom.xml
scripts/: start-dev-stack.sh
(+140 files in other folders)
