[project]
name = "nightly-pick-agent"
version = "0.1.0"
description = "Nightly Pick AI agent service"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "pydantic>=2.9.0,<3.0.0",
  "pydantic-settings>=2.5.0,<3.0.0",
  "httpx>=0.27.0,<1.0.0",
  "tencentcloud-sdk-python-asr>=3.0.0,<4.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
